Fix link contrast in dark mode

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,7 +18,7 @@
 [site-theme="dark"] {
 	--color: white;
 	--main-bg-color: #2d2d2d;
-	--consistent-link-color: #378AD3;
+	--consistent-link-color: #7DB3E3;
 	--content-metadata-color: #d4d4d4;
 	--box-shadow-container-color: #222222;
 	--raised-backgroud-color: #393939;
